--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-body {
+@import 'bootstrap/dist/css/bootstrap.min.css';
+body,
+* {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +12,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header,
+footer {
+  background-color: blue;
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
 }
